--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -5,11 +5,11 @@ $landscape: new-breakpoint(min-width 960px);
 
 // Declare colours
 $white: rgba(255, 255, 255, 1);
-$black: rgba(0, 0, 0, 1);
-$dark-grey: rgba(0, 0, 0, 0.5);
-$light-grey: rgba(0, 0, 0, 0.25);
+$black: rgba(0, 0, 50, 1);
+$dark-grey: rgba(0, 0, 66, 0.5);
+$light-grey: rgba(0, 0, 66, 0.25);
 $cyan50: rgba(224, 247, 250, 1);
-$cyanA700: rgba(0, 200, 230, 1);
+$cyanA700: rgba(0, 150, 188, 1);
 
 // Declare type size
 $font-unit: 1.1em;
@@ -42,7 +42,7 @@ html {
 
 body {
    margin: 0px;
-   background-color: $white;
+   background-image: linear-gradient(to left, rgba(195,240,246,1), rgba(255,223,199,1));
 }
 
 main {
