--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -272,7 +272,7 @@ sub {
 	padding-bottom: 56.25%; /* 16:9 */
 	height: 0;
    margin-bottom: 0.33em;
-   iframe {
+   video, iframe {
    	position: absolute;
    	top: 0;
    	left: 0;
