Rename case studies to Work in navigation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
          {% elsif page.label contains "project" %}
             <span class="backlink"> / <a href="/work">Work</a></span>
          {% elsif page.label contains "study" %}
-            <span class="backlink"> / <a href="/case-studies">Case</a></span>
+            <span class="backlink"> / <a href="/case-studies">Work</a></span>
          {% endif %}
       </h1>
    </div>
