Swap ul tag to ol tag

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -123,7 +123,7 @@ h4 { // used for post metadata
    line-height: $medium-leading;
 }
 
-ul {
+ol {
    font-weight: 400;
    font-size: $medium-type;
    line-height: $large-leading;
