--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -151,10 +151,10 @@ ul {
 
 img {
    width: 100%;
-   @include media($portrait) {
-      width: 90%;
-      margin-left: 5%;
-   }
+   // @include media($portrait) {
+   //    width: 90%;
+   //    margin-left: 5%;
+   // }
 }
 
 ::-moz-selection { /* Code for Firefox */
