Update description in Head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="title" content="{{ site.data.mk.name }}">
-      <meta name="description" content="{{ site.data.mk.name }} Designer — Personal Page">
+      <meta name="description" content="{{ site.data.mk.name }} Marek Kultys — Design leader — Personal page with case studies">
       <meta name="author" content="{{ site.data.mk.name }}">
 
       {% include favicon.html %}
