Update social media thumb image

--- a/_includes/social-media-cards.html
+++ b/_includes/social-media-cards.html
@@ -8,3 +8,6 @@
 <meta name="twitter:domain" content="{{ site.data.mk.url }}">
 <meta name="twitter:title" content="{{ site.data.mk.name }}">
 <meta name="twitter:description" content="{{ site.data.pages.home.headline }}">
+
+<meta name="image" property="og:image" content="/img/favicon/voyager-alpha3-thumbnail.png">
+
