Update existing og meta items in header

--- a/_includes/social-media-cards.html
+++ b/_includes/social-media-cards.html
@@ -1,6 +1,6 @@
 <meta prefix="og: http://ogp.me/ns#" property="og:title" content="{{ site.data.mk.name }}" />
-<meta prefix="og: http://ogp.me/ns#" property="og:description" content="{{ site.data.pages.home.headline }}" />
-<meta prefix="og: http://ogp.me/ns#" property="og:image" content="{{ site.data.mk.url }}/img/graph-v.png" />
+<meta prefix="og: http://ogp.me/ns#" property="og:description" content="{{ site.data.mk.description }}" />
+<meta prefix="og: http://ogp.me/ns#" property="og:image" content="{{ site.data.mk.url }}/img/favicon/voyager-alpha3-thumbnail.png" />
 <meta prefix="og: http://ogp.me/ns#" property="og:url" content="{{ site.data.mk.url }}" />
 
 <meta name="image" property="og:image" content="/img/favicon/voyager-alpha3-thumbnail.png">
