--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container footer">
    <div class="container-two-thirds shift">
       <h4>Written, designed, and built by {{ site.data.mk.author }}.</h4>
-      <h4>All content &copy;{{ 'now' | date: "%Y" }} unless stated otherwise.</h4>
+      <h4>&copy; 2011–{{ 'now' | date: "%Y" }} unless company content or otherwise stated.</h4>
    </div>
 </div>
