Added secondary annotation style

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -70,6 +70,11 @@ main {
    }
 }
 
+.secondary-annotation {
+   color: $dark-grey;
+   text-align: right;
+}
+
 
 
 
@@ -86,7 +91,6 @@ a {
    }
 }
 
-p, h1, h2, h3, h4, ol, ul {
 p, h1, h2, h3, h4, h5, ol, ul, li {
    font-family: 'Barlow', sans-serif;
    color: $black;
