--- a/_includes/links.html
+++ b/_includes/links.html
@@ -2,7 +2,7 @@
    <div class="container">
       <div class="container-two-third shift">
          <ol>
-            <li {% if page.label == 'case-study' or page.label contains 'project' %} class="strong" {% endif %}><a href="{{ site.data.pages.case-study.link }}">{{ site.data.pages.case-study.headline }}</a></li>
+            <li {% if page.label contains 'case' %} class="strong" {% endif %}><a href="{{ site.data.pages.case-study.link }}">{{ site.data.pages.case-study.headline }}</a></li>
             <li {% if page.label == 'blog' %} class="strong" {% endif %}><a href="{{ site.data.pages.blog.link }}">{{ site.data.pages.blog.headline }}</a></li>
             <li {% if page.label == 'contact' %} class="strong" {% endif %}><a href="{{ site.data.pages.contact.link }}">{{ site.data.pages.contact.headline }}</a></li>
          </ol>
