--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -14,11 +14,20 @@
 			<main>
 				{% include header.html %}
 				{% include divider.html %}
-				<article>
-					{{ content }}
-				</article>
-				{% include divider.html %}
-				{% include links.html %}
+				{% if page.label == "home" %}
+           			{% include links.html %}
+					{% include divider.html %}
+					<article>
+						{{ content }}
+					</article>
+         		{% else %}
+					<article>
+						{{ content }}
+					</article>
+					{% include divider.html %}
+					{% include links.html %}
+         		{% endif %}
+				
 			</main>
 			<footer>
 				{% include footer.html %}
