Disable masking on Mixpanel
Allow Mixpanel to capture static content in session replay

--- a/_includes/mixpanel.html
+++ b/_includes/mixpanel.html
@@ -9,6 +9,8 @@
     autocapture: true,
     record_sessions_percent: 100,
     api_host: 'https://api-eu.mixpanel.com',
+    record_mask_text_selector: '',
+    record_block_selector: ''
   })
 
 </script>
