--- a/_includes/links.html
+++ b/_includes/links.html
@@ -1,6 +1,6 @@
 <section>
    <div class="container">
-      <div class="container-two-third shift">
+      <div class="container-two-thirds shift">
          <ol>
             <li {% if page.label contains 'case' %} class="strong" {% endif %}><a href="{{ site.data.pages.case-study.link }}">{{ site.data.pages.case-study.headline }}</a></li>
             <li {% if page.label contains 'blog' %} class="strong" {% endif %}><a href="{{ site.data.pages.blog.link }}">{{ site.data.pages.blog.headline }}</a></li>
