--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -229,10 +229,10 @@ sub {
       }
    }
 
-   .container-two-halfs {
-      // border: 1px solid yellow;
-      @include span-columns(6);
-   }
+   // .container-two-halfs {      // NOT USED
+   //    // border: 1px solid yellow;
+   //    @include span-columns(6);
+   // }
 }
 
 .shift {
@@ -295,9 +295,9 @@ img {
    }
 }
 
-.border {
-   border: $line-thickness $line-style $dark-grey;
-}
+// .border {                                          // NOT USED
+//    border: $line-thickness $line-style $dark-grey;
+// }
 
 .shadow {
    filter: drop-shadow(0 2px 10px $light-grey);
@@ -307,14 +307,14 @@ img {
    margin-bottom: $small-leading;
 }
 
-.half-image {
-   padding-left: $small-leading;
-   padding-right: $medium-leading;
-   padding-bottom: $large-leading;
-   a {
-      border: 0;
-   }
-}
+// .half-image {                           // NOT USED
+//    padding-left: $small-leading;
+//    padding-right: $medium-leading;
+//    padding-bottom: $large-leading;
+//    a {
+//       border: 0;
+//    }
+// }
 
 .video-wrapper {
 	position: relative;
