Add copy function to email

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,6 +5,7 @@
       	{{ site.data.mk.name }}
       	</title>
     	{% include head.html %}
+		{% include scripts.html %}
 		{% include mixpanel.html %}
 	</head>
 
