--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -15,6 +15,7 @@ $miami: linear-gradient(to left, rgba(195,240,246,1), rgba(255,223,199,1));
 
 // Declare type size
 $font-unit: 1.2em;
+$nano-type: 0.66*$font-unit;
 $micro-type: 0.75*$font-unit;
 $small-type: 1*$font-unit;
 $semi-type: 1.1*$font-unit;
@@ -271,6 +272,50 @@ img {
    max-width: 70%;
    @include media($landscape){
       max-width: 100%;
+   }
+}
+
+.email-mailto {
+   @include media($landscape){
+      display: none;
+   }
+}
+
+.email-copy {
+   display: none;
+   @include media($landscape){
+      display: inline;
+      position: relative;
+      color: $black;
+      border-bottom: $underline;
+      padding-bottom: $line-thickness;
+      cursor: pointer;
+      &::after {
+         content: 'Click to copy';
+         position: absolute;
+         top: -20%;
+         right: 102%;
+         margin-bottom: $nano-leading;
+         border-radius: $line-thickness;
+         font-size: $nano-type;
+         background: $cyanA700;
+         color: $white;
+         padding: 0 $nano-leading*2;
+         white-space: nowrap;
+         opacity: 0;
+         transition: opacity 0.2s ease;
+         pointer-events: none;
+      }
+      &:hover::after {
+         opacity: 1;
+      }
+      &:hover {
+         color: $cyanA700;
+         border-color: $cyanA700;
+      }
+      &.copied::after {
+         content: 'Copied';
+      }
    }
 }
 
