Add target _blank to all pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container footer">
    <div class="container-two-thirds shift">
-      <h4>Designed + written + <a href="https://github.com/marek-kultys">built</a> by {{ site.data.mk.author }}.</h4>
+      <h4>Designed + written + <a href="https://github.com/marek-kultys" target="_blank">built</a> by {{ site.data.mk.author }}.</h4>
       <h4>&copy; 2011-{{ 'now' | date: "%Y" }} unless otherwise stated.</h4>
    </div>
 </div>
